// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parsing Failed parse fail-absolute.json 1`] = `
"Failed to parse Feature spec
required property \\"polypoly\\"
├─ required property \\"root\\"
│  └─ cannot decode \\"/root\\", should be relative
└─ required property \\"manifest\\"
   └─ cannot decode undefined, should be string"
`;

exports[`Parsing Failed parse fail-empty.json 1`] = `
"Failed to parse main manifest
required property \\"version\\"
└─ cannot decode \\"\\", should be version string"
`;

exports[`Parsing Failed parse fail-traversal.json 1`] = `
"Failed to parse Feature spec
required property \\"polypoly\\"
├─ required property \\"root\\"
│  └─ cannot decode \\"../root\\", should be relative
└─ required property \\"manifest\\"
   └─ cannot decode undefined, should be string"
`;

exports[`Parsing Failed parse fail-version.json 1`] = `
"Failed to parse engines
required property \\"polypoly\\"
└─ cannot decode \\"^a.b.c\\", should be Invalid comparator: ^a.b.c"
`;

exports[`Parsing Successful parse ok.json 1`] = `
Object {
  "api": Range {
    "includePrerelease": false,
    "loose": false,
    "options": Object {},
    "range": ">=0.1.0 <0.2.0-0",
    "raw": "^0.1.0",
    "set": Array [
      Array [
        Comparator {
          "loose": false,
          "operator": ">=",
          "options": Object {},
          "semver": SemVer {
            "build": Array [],
            "includePrerelease": false,
            "loose": false,
            "major": 0,
            "minor": 1,
            "options": Object {},
            "patch": 0,
            "prerelease": Array [],
            "raw": "0.1.0",
            "version": "0.1.0",
          },
          "value": ">=0.1.0",
        },
        Comparator {
          "loose": false,
          "operator": "<",
          "options": Object {},
          "semver": SemVer {
            "build": Array [],
            "includePrerelease": false,
            "loose": false,
            "major": 0,
            "minor": 2,
            "options": Object {},
            "patch": 0,
            "prerelease": Array [
              0,
            ],
            "raw": "0.2.0-0",
            "version": "0.2.0-0",
          },
          "value": "<0.2.0-0",
        },
      ],
    ],
  },
  "description": "This is an example feature",
  "links": Object {
    "link1": "https://example.com/1",
    "link2": "https://example.com/2",
  },
  "name": "The Test Feature",
  "primaryColor": "#000000",
  "root": "assets",
  "thumbnail": "assets/thumbnail.png",
  "translations": Array [
    Object {
      "description": "Das ist eine Beispiel-Feature",
      "language": "de",
      "links": Object {
        "link1": "https://example.com/1",
        "link2": "https://example.com/2",
      },
    },
  ],
  "version": SemVer {
    "build": Array [],
    "includePrerelease": false,
    "loose": false,
    "major": 0,
    "minor": 0,
    "options": Object {},
    "patch": 0,
    "prerelease": Array [],
    "raw": "0.0.0",
    "version": "0.0.0",
  },
}
`;
